--- a/app/source/css/utils/bs-extensions.styl
+++ b/app/source/css/utils/bs-extensions.styl
@@ -351,4 +351,8 @@ ResetSectionTitleMargin() {
     font-size: 29px !important;
     top: 27px;
 }
-
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
