--- a/app/source/css/app.styl
+++ b/app/source/css/app.styl
@@ -56,6 +56,7 @@
 @import 'components/Content.styl'
 @import 'components/WeeklySchedule.styl'
 @import 'components/Onboarding.styl'
+@import 'components/ServiceProfessionalPricing.styl'
 
 /** Activities styles **/
 @import 'activities/calendar.styl'
