--- a/app/source/css/components/ServiceProfessionalPricing.styl
+++ b/app/source/css/components/ServiceProfessionalPricing.styl
@@ -67,9 +67,9 @@
     >* .Select-block {
         display: block;
         width: 100%;
-        @media $mediaMinMd {
-          display: inline-block;
-          width: auto;
-        }
+//        @media $mediaMinMd {
+//          display: inline-block;
+//          width: auto;
+//        }
     }
 }
