--- a/app/source/css/components/LightForm.styl
+++ b/app/source/css/components/LightForm.styl
@@ -142,4 +142,32 @@
         width: 1.25em;
         color: #ff5a5f;
     }
+    >* input[type="date"] {
+        -webkit-appearance: none;
+        margin-left: 10px;
+        display: inline;
+        width: 175px;
+    }
+    >* input[type="number"] {
+        -webkit-appearance: none;
+        margin-left: 10px;
+        display: inline;
+        width: 100px;
+    }
+    >* input[type="radio"] {
+        margin: 0px 5px 0px 10px;
+        display: inline;
+        position: relative;
+        height: 1.25em;
+        width: 1.25em;
+        vertical-align: middle;
+        color: #484848;
+        transition: border-color 0.2s;
+    }
+    .LightForm-InputRow {
+        margin-bottom: 8px;
+    }
+    >* th {
+        vertical-align: top;
+    }
 }
