--- a/app/source/css/utils/bs-extensions.styl
+++ b/app/source/css/utils/bs-extensions.styl
@@ -362,4 +362,9 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
+input[type=date]::-webkit-inner-spin-button, 
+input[type=date]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
 
