--- a/app/source/css/utils/bs-extensions.styl
+++ b/app/source/css/utils/bs-extensions.styl
@@ -357,4 +357,14 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 29px !important;
     top: 27px;
 }
+h3 {
+    text-align: left;
+    margin-left: 5px;
+    font-size: 15px;
+    color: $brand-secondary;
+}
+h4  {
+    text-align: center;
+    font-size: 10px;
+}
 
